tests/compile-fail/hello.rs

fn main() {
    testing //~ ERROR unresolved name
}
